style.css
    /*General attribute*/
    
     :root {
        --color-blue: #0065FC;
        --color-light-blue: #DEEBFF;
        --color-black: #000000;
        --color-grey: #F2F2F2;
        --color-white: #FFFFFF;
        --color-transparent: rgba(255, 255, 255, .4);
    }
    
    * {
        margin: 0px;
        padding: 0px;
        list-style: none;
    }
    
    body {
        font-family: 'Raleway', sans-serif;
        font-weight: 400;
        font-size: 1rem;
        line-height: 1.2;
        /*color: var(--color-black);*/
    }
    
    h1,
    h2 {
        font-size: 1.25rem;
        font-weight: 600;
        line-height: 1.4;
    }
    
    h3 {
        font-size: 1.125rem;
        font-weight: 600;
        line-height: 1.2;
    }
    
    a {
        color: var(--color-black);
        text-decoration: none;
        cursor: pointer;
    }
    
    .fas {
        font-size: 1.25rem;
        color: var(--color-black);
    }
    
    .nav__section,
    .search__section,
    .hosting__section,
    .Activity__section,
    .Footer__section {
        padding: 0rem 2.5vw;
        width: 95vw;
    }
    /*Header section*/
    
    #nav__logo {
        justify-self: start;
        padding-top: 40px;
        min-width: 97px;
        min-height: 45px;
    }
    
    .nav__section {
        margin-bottom: 2rem;
    }
    
    .nav__wrapper {
        display: grid;
        grid-template-columns: 1fr repeat(3, 160px);
        align-items: center;
        justify-content: center;
    }
    
    .nav__link {
        padding-top: 50px;
        padding-bottom: 16px;
        text-align: center;
        color: var(--color-black);
    }
    
    #nav__link--dif {
        padding-top: 50px;
        padding-bottom: 16px;
        font-weight: 600;
        text-align: center;
        color: var(--color-blue)
    }
    
    .nav__link:hover {
        padding-top: 46px;
        color: var(--color-blue);
        border-top: 4px solid #0065FC;
    }
    
    #nav__link--dif:hover {
        padding-top: 46px;
        border-top: 4px solid #0065FC;
    }
    /* Search section */
    
    .search__section {
        margin-bottom: 2rem;
    }
    
    .search__header {
        margin-bottom: 1rem;
    }
    
    .search__header__title {
        margin-bottom: 0.25rem;
    }
    
    .search__subtitle {
        margin: 0px;
    }
    
    .search__form {
        display: flex;
        align-items: center;
        margin-bottom: 2rem;
    }
    
    .search__form__wrapper--icon {
        display: flex;
        align-items: center;
        justify-content: center;
        min-width: 3rem;
        min-height: 3rem;
        background-color: var(--color-grey);
        border-radius: 1rem 0rem 0rem 1rem;
    }
    
    .search__form--input {
        padding: 0rem 1rem;
        width: 235px;
        height: 2.9rem;
        font-size: 1.125rem;
        font-weight: 500;
        line-height: 1.2;
        border-top: 1px solid var(--color-grey);
        border-right: none;
        border-bottom: 1px solid var(--color-grey);
        border-left: none;
    }
    
    .search__form--input::placeholder {
        font-size: 1.125rem;
        font-weight: 500;
        line-height: 1.2;
        color: var(--color-black);
    }
    
    .search__form--button {
        font-size: 1.125rem;
        font-weight: 600;
        line-height: 1.2;
        color: var(--color-white);
        background-color: var(--color-blue);
        width: auto;
        padding: 0rem 1rem 0rem 1rem;
        height: 3rem;
        border-radius: 0rem 1rem 1rem 0rem;
        border: none;
    }
    /* Filters Zone */
    
    .search__filter {
        display: flex;
        align-items: center;
        margin-bottom: 2rem;
    }
    
    .search__filter-title {
        margin-right: 1rem;
    }
    
    .search__filters {
        display: grid;
        grid-template-columns: repeat(4, auto);
        grid-column-gap: 2rem;
    }
    
    .search__filter-elements {
        display: flex;
        align-items: center;
        width: auto;
        height: 3rem;
        background-color: var(--color-white);
        border: 2px solid var(--color-grey);
        border-radius: 1.5rem;
        transition-duration: 0.5s;
        cursor: pointer;
    }
    
    .search__filter-elements:hover {
        background-color: var(--color-light-blue);
        border: 2px solid var(--color-light-blue);
    }
    
    .search-filter__wrapper-icon {
        display: flex;
        align-items: center;
        justify-content: center;
        margin: -2px;
        position: relative;
        min-width: 3rem;
        min-height: 3rem;
        z-index: 1;
        background-color: var(--color-light-blue);
        border: 2px solid var(--color-light-blue);
        border-radius: 3rem;
    }
    
    .fa-money-bill-wave,
    .fa-child,
    .fa-dog,
    .fa-heart {
        color: var(--color-blue);
    }
    
    .search__filter-name {
        padding: 0rem 0.75rem;
        font-size: 1.125rem;
        font-weight: 600;
        line-height: 1.2;
    }
    
    .search__proposition {
        display: flex;
        flex-direction: row;
        align-items: center;
    }
    
    .fa-info {
        color: var(--color-blue);
        font-size: 1rem;
    }
    
    .search__proposition__icon {
        display: flex;
        justify-content: center;
        align-items: center;
        margin-right: 0.75rem;
        min-width: 1.5rem;
        min-height: 1.5rem;
        border: 2px solid var(--color-grey);
        border-radius: 1.5rem;
        cursor: pointer;
    }
    /*Hosting Section*/
    
    .hosting__section {
        margin-bottom: 3rem;
    }
    
    .hosting__display {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-column-gap: 2.5vw;
    }
    
    .hosting__wrapper {
        grid-area: 1 / 1 / 2 / 3;
        padding: 2rem 2.5vw;
        background-color: var(--color-grey);
        border-radius: 1.5rem;
    }
/* ... */

